<resources>
    <string name="app_name">WaterQualityMonitoringSystem</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter phone</string>

    <string name="select_location">Select Location</string>
    <string name="enter_name">Enter name</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update">Update</string>
    <string name="sensor_info">Sensor Info</string>
    <string name="sign_up_n">Sign up</string>
    <string name="ph_level_is">PH Level is</string>
    <string name="temperature_is">Temperature is</string>
    <string name="turbo">Turbo is</string>
    <string name="soil_is">Soil is</string>
    <string name="next_is">Next date is</string>
</resources>
